Invalid format specifier when printing in_cset_state_t

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b99
    • sparc

      In the (non-product) verification code g1CollectedHeap.cpp there are a few log messages which print out the in_cset_state_t states using %d as the format specifier. However, the in_cset_state_t type is defined as an intptr_t on SPARC. There's already a helpful format macro CSETSTATE_FORMAT which should be used instead.

            Assignee:
            Mikael Vidstedt
            Reporter:
            Mikael Vidstedt
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: