8144605: Invalid format specifier when printing in_cset_state_t

Use existing CSETSTATE_FORMAT macro in format string

Reviewed-by: kbarrett, tschatzl